Update .gitignore to include onion services

--- a/.gitignore
+++ b/.gitignore
@@ -164,11 +164,4 @@ cython_debug/
 .idea/
 
 #Onion services
-service*/hostname
-service*/*public_key
-service*/*secret_key
-service*/authorized_clients/
-src/hostname
-src/*public_key
-src/*secret_key
-src/authorized_clients/
+src/hidden_services
