--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Hidden Services files
-hidden_services/clients/
-hidden_services/server
+src/hidden_services/clients/client*/*
+src/hidden_services/server/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -162,6 +162,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-
-#Onion services
-src/hidden_services
