--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Hidden Services files
-hidden_services/clients/
-hidden_services/server
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -164,4 +160,7 @@ cython_debug/
 .idea/
 
 #Onion services
-src/hidden_services
+hostname*
+*_public_key
+*_secret_key
+/authorized_clients
