--- a/server/config.ini
+++ b/server/config.ini
@@ -3,9 +3,9 @@ HOST = 127.0.0.1
 PORT = 5050
 
 [HiddenServiceClient]
-HiddenServiceDir = C:/Users/kuban/Projects/School/Peer2Peer-with-tor/client/hidden_service
-HiddenServicePort = 5001 localhost:5001
+HiddenServiceDir = <app_dir>/client/hidden_service
+HiddenServicePort = 5001 127.0.0.1:5001
 
 [HiddenServiceServer]
-HiddenServiceDir = C:/Users/kuban/Projects/School/Peer2Peer-with-tor/server/hidden_service
-HiddenServicePort = 5050 localhost:5050
+HiddenServiceDir = <app_dir>/server/hidden_service
+HiddenServicePort = 5050 127.0.0.1:5050
