default config files

--- a/client/config.ini
+++ b/client/config.ini
@@ -6,10 +6,7 @@ SERVER_PORT = 5050
 HOST = 127.0.0.1
 PORT = 5001
 
-[HiddenServiceClient]
-HiddenServiceDir = <app_dir>/client/hidden_service
-HiddenServicePort = 5001 127.0.0.1:5001
+[HiddenService]
+HiddenServiceDir = path/to/hidden_service/dir
+HiddenServicePort = port 127.0.0.1:port
 
-[HiddenServiceServer]
-HiddenServiceDir = <app_dir>/server/hidden_service
-HiddenServicePort = 5050 127.0.0.1:5050
