--- a/server/config.ini
+++ b/server/config.ini
@@ -2,10 +2,6 @@
 HOST = 127.0.0.1
 PORT = 5050
 
-[HiddenServiceClient]
-HiddenServiceDir = <app_dir>/client/hidden_service
-HiddenServicePort = 5001 127.0.0.1:5001
-
-[HiddenServiceServer]
-HiddenServiceDir = <app_dir>/server/hidden_service
-HiddenServicePort = 5050 127.0.0.1:5050
+[HiddenService]
+HiddenServiceDir = path/to/hidden_service/dir
+HiddenServicePort = port 127.0.0.1:port
